--- a/nazmul.ipynb
+++ b/nazmul.ipynb
@@ -1868,9 +1868,9 @@
         "class Task2E(nn.Module):\n",
         "  def __init__(self, num_labels, vocab_size):\n",
         "    super(Task2E, self).__init__()\n",
-        "    self.lin = nn.Linear(vocab_size, 50)\n",
-        "    self.lin1 = nn.Linear(50, 100)\n",
-        "    self.lin2 = nn.Linear(100, num_labels)\n",
+        "    self.lin = nn.Linear(vocab_size, 100)\n",
+        "    self.lin1 = nn.Linear(100, 50)\n",
+        "    self.lin2 = nn.Linear(50, num_labels)\n",
         "    \n",
         "  def forward(self, x):\n",
         "    return F.softmax(self.lin2(self.lin1(self.lin(x))))"
@@ -1910,7 +1910,7 @@
       "metadata": {
         "id": "8WaX0UW9BwIM",
         "colab_type": "code",
-        "outputId": "22d838ab-22b4-43a1-bd13-4fcb03787488",
+        "outputId": "5e547d60-6cbc-4d49-8764-a27e1e218417",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
@@ -1952,7 +1952,7 @@
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n",
         "\n"
       ],
-      "execution_count": 41,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
@@ -1972,18 +1972,18 @@
         {
           "output_type": "stream",
           "text": [
-            "CURRENT LOSS: -0.9999836683273315\n",
+            "CURRENT LOSS: -0.9999829530715942\n",
             "1\n",
-            "CURRENT LOSS: -1.0\n",
+            "CURRENT LOSS: -0.9934915900230408\n",
             "2\n",
-            "CURRENT LOSS: -1.0\n",
+            "CURRENT LOSS: -0.9999970197677612\n",
             "3\n",
-            "CURRENT LOSS: -0.9999996423721313\n",
+            "CURRENT LOSS: -0.9999982118606567\n",
             "--- AFTER TRAINING ---\n",
-            "Precision: 0.8717948717948718\n",
-            "Recall: 0.8641779189833201\n",
-            "f1-score: 0.8679696848823294\n",
-            "Accuracy: 0.8676\n"
+            "Precision: 0.8805668016194332\n",
+            "Recall: 0.863780778395552\n",
+            "f1-score: 0.872093023255814\n",
+            "Accuracy: 0.8724\n"
           ],
           "name": "stdout"
         }
@@ -1997,7 +1997,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 72
         },
-        "outputId": "56947185-5d1e-4b91-b7a3-3028dd2fe9f3"
+        "outputId": "fa3f79df-573a-4c29-ecfa-9819668b927b"
       },
       "cell_type": "code",
       "source": [
@@ -2005,7 +2005,7 @@
         "from google.colab import files\n",
         "files.download(\"Task2E.mdl\")"
       ],
-      "execution_count": 42,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -3401,6 +3401,504 @@
           "name": "stderr"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "AB5gAk7hDmN0",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#TASK6"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "aD0gpglDDovL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "class Task(nn.Module):\n",
+        "  def __init__(self, num_labels, vocab_size):\n",
+        "    super(Task6, self).__init__()\n",
+        "    self.lin = nn.Linear(vocab_size, 30)\n",
+        "    self.lin1 = nn.Linear(30, 20)\n",
+        "    self.lin2 = nn.Linear(20, 10)\n",
+        "    self.lin3 = nn.Linear(10, num_labels)\n",
+        "    \n",
+        "    \n",
+        "  def forward(self, x):\n",
+        "    return F.softmax(self.lin3(self.lin2(self.lin1(self.lin(x)))))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "WQd3Hk77Do7t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "9ENdjYXcDpFI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Oqoasr0EDpPF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "pTwczfFADpbN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "A5Q8_WzYPkJW",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#TASK7A"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Gb4R5im4Sdx2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "class Task7A(nn.Module):\n",
+        "  def __init__(self, num_labels, vocab_size):\n",
+        "    super(Task7A, self).__init__()\n",
+        "    self.lin = nn.Linear(vocab_size, 30)\n",
+        "    self.lin1 = nn.Linear(30, 20)\n",
+        "    self.lin2 = nn.Linear(20, 10)\n",
+        "    self.lin3 = nn.Linear(10, num_labels)\n",
+        "    \n",
+        "    \n",
+        "  def forward(self, x):\n",
+        "    return F.softmax(self.lin3(self.lin2(self.lin1(self.lin(x)))))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "UUL-3egbSeH1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "Task_7A = Task7A(NUM_LABELS, VOCAB_SIZE).cuda()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "gW5QtznxT0nd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# define a loss function and an optimizer\n",
+        "loss_functionTask7A = nn.CrossEntropyLoss()\n",
+        "optTask7A = torch.optim.SGD(Task_7A.parameters(), lr = 0.005)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "S7QthLucUOws",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        },
+        "outputId": "22552241-a9f5-4c15-dea0-bafe45b63525"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Task7A\n",
+        "# the training loop\n",
+        "for epoch in range(5):\n",
+        "    print(epoch)\n",
+        "    for instance, label in data:\n",
+        "        # get the training data\n",
+        "        Task_7A.zero_grad()\n",
+        "        bow_vec = Variable(make_bow_vector(instance, word_to_ix)).cuda()\n",
+        "        label = Variable(make_target(label))\n",
+        "        probs = Task_7A(bow_vec) # forward pass\n",
+        "        loss = loss_functionTask7A(probs, label)\n",
+        "        loss.backward()\n",
+        "        optTask7A.step()\n",
+        "    print('CURRENT LOSS: {}'.format(loss.data))\n",
+        "    \n",
+        "from sklearn.metrics import precision_score\n",
+        "from sklearn.metrics import recall_score\n",
+        "from sklearn.metrics import f1_score\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "print('--- AFTER TRAINING ---')\n",
+        "predictions = list()\n",
+        "for instance, label in test_data:\n",
+        "    bow_vec = Variable(make_bow_vector(instance, word_to_ix))\n",
+        "    logprobs = Task_7A(bow_vec.cuda())\n",
+        "    pred = np.argmax(logprobs.data.cpu().numpy())\n",
+        "    predictions.append(pred)\n",
+        "    \n",
+        "print('Precision: {}'.format(precision_score(test_labels,predictions)))\n",
+        "print('Recall: {}'.format(recall_score(test_labels,predictions)))\n",
+        "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
+        "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
+      ],
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  # This is added back by InteractiveShellApp.init_path()\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "CURRENT LOSS: 0.31331050395965576\n",
+            "1\n",
+            "CURRENT LOSS: 0.3132634162902832\n",
+            "2\n",
+            "CURRENT LOSS: 0.3132801055908203\n",
+            "3\n",
+            "CURRENT LOSS: 0.31326162815093994\n",
+            "4\n",
+            "CURRENT LOSS: 0.3132636547088623\n",
+            "--- AFTER TRAINING ---\n",
+            "Precision: 0.8564814814814815\n",
+            "Recall: 0.8816521048451151\n",
+            "f1-score: 0.8688845401174169\n",
+            "Accuracy: 0.866\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "v0O7YYnQUPBK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "4fab2fc1-a2b5-4dac-a87f-9f3de73a1218"
+      },
+      "cell_type": "code",
+      "source": [
+        "torch.save(Task_7A,\"Task7A.mdl\")\n",
+        "from google.colab import files\n",
+        "files.download(\"Task7A.mdl\")"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type Task7A. It won't be checked for correctness upon loading.\n",
+            "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "PFQQaLzoSW9J",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#TASK7B"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YdNaw3juSevf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "class Task7B(nn.Module):\n",
+        "  def __init__(self, num_labels, vocab_size):\n",
+        "    super(Task7B, self).__init__()\n",
+        "    self.lin = nn.Linear(vocab_size, 30)\n",
+        "    self.lin1 = nn.Linear(30, 20)\n",
+        "    self.lin2 = nn.Linear(20, 10)\n",
+        "    self.lin3 = nn.Linear(10, num_labels)\n",
+        "    \n",
+        "    \n",
+        "  def forward(self, x):\n",
+        "    return F.softmax(self.lin3(self.lin2(self.lin1(self.lin(x)))))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "W0Rva5PESe2b",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "Task_7B = Task7B(NUM_LABELS, VOCAB_SIZE).cuda()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "u2y90HC-TlK_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# define a loss function and an optimizer\n",
+        "loss_functionTasK7B = nn.MSELoss()\n",
+        "optTask7B = torch.optim.SGD(Task_7B.parameters(), lr = 0.005)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "b47tWXlKUe3u",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Task7B\n",
+        "# the training loop\n",
+        "for epoch in range(5):\n",
+        "    print(epoch)\n",
+        "    for instance, label in data:\n",
+        "        # get the training data\n",
+        "        Task_7B.zero_grad()\n",
+        "        bow_vec = Variable(make_bow_vector(instance, word_to_ix)).cuda()\n",
+        "        label = Variable(make_target(label))\n",
+        "        probs = Task_7B(bow_vec) # forward pass\n",
+        "        loss = loss_functionTask7B(probs, label)\n",
+        "        loss.backward()\n",
+        "        optTask7B.step()\n",
+        "    print('CURRENT LOSS: {}'.format(loss.data))\n",
+        "    \n",
+        "from sklearn.metrics import precision_score\n",
+        "from sklearn.metrics import recall_score\n",
+        "from sklearn.metrics import f1_score\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "print('--- AFTER TRAINING ---')\n",
+        "predictions = list()\n",
+        "for instance, label in test_data:\n",
+        "    bow_vec = Variable(make_bow_vector(instance, word_to_ix))\n",
+        "    logprobs = Task_7B(bow_vec.cuda())\n",
+        "    pred = np.argmax(logprobs.data.cpu().numpy())\n",
+        "    predictions.append(pred)\n",
+        "    \n",
+        "print('Precision: {}'.format(precision_score(test_labels,predictions)))\n",
+        "print('Recall: {}'.format(recall_score(test_labels,predictions)))\n",
+        "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
+        "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "LSf1I6a4VE0Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "torch.save(Task_7B,\"Task7B.mdl\")\n",
+        "from google.colab import files\n",
+        "files.download(\"Task7B.mdl\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "z4rQPyjGSW0z",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#TASK7C"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "olNrFU4DPt7s",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "class Task7C(nn.Module):\n",
+        "  def __init__(self, num_labels, vocab_size):\n",
+        "    super(Task7C, self).__init__()\n",
+        "    self.lin = nn.Linear(vocab_size, 30)\n",
+        "    self.lin1 = nn.Linear(30, 20)\n",
+        "    self.lin2 = nn.Linear(20, 10)\n",
+        "    self.lin3 = nn.Linear(10, num_labels)\n",
+        "    \n",
+        "    \n",
+        "  def forward(self, x):\n",
+        "    return F.softmax(self.lin3(self.lin2(self.lin1(self.lin(x)))))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "IQLZjZFSPuIS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "Task_7C = Task7C(NUM_LABELS, VOCAB_SIZE).cuda()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "hH-_MrZjTZkN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# define a loss function and an optimizer\n",
+        "loss_functionTask7C = nn.HingeEmbeddingLoss()\n",
+        "optTask7C = torch.optim.SGD(Task_7C.parameters(), lr = 0.005)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "99iH2dYIPuOW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Task7C\n",
+        "# the training loop\n",
+        "for epoch in range(5):\n",
+        "    print(epoch)\n",
+        "    for instance, label in data:\n",
+        "        # get the training data\n",
+        "        Task_7C.zero_grad()\n",
+        "        bow_vec = Variable(make_bow_vector(instance, word_to_ix)).cuda()\n",
+        "        label = Variable(make_target(label))\n",
+        "        probs = Task_7C(bow_vec) # forward pass\n",
+        "        loss = loss_functionTask7C(probs, label)\n",
+        "        loss.backward()\n",
+        "        optTask7C.step()\n",
+        "    print('CURRENT LOSS: {}'.format(loss.data))\n",
+        "    \n",
+        "from sklearn.metrics import precision_score\n",
+        "from sklearn.metrics import recall_score\n",
+        "from sklearn.metrics import f1_score\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "print('--- AFTER TRAINING ---')\n",
+        "predictions = list()\n",
+        "for instance, label in test_data:\n",
+        "    bow_vec = Variable(make_bow_vector(instance, word_to_ix))\n",
+        "    logprobs = Task_7C(bow_vec.cuda())\n",
+        "    pred = np.argmax(logprobs.data.cpu().numpy())\n",
+        "    predictions.append(pred)\n",
+        "    \n",
+        "print('Precision: {}'.format(precision_score(test_labels,predictions)))\n",
+        "print('Recall: {}'.format(recall_score(test_labels,predictions)))\n",
+        "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
+        "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "kh_TFQGJPuDG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "torch.save(Task_7B,\"Task7B.mdl\")\n",
+        "from google.colab import files\n",
+        "files.download(\"Task7B.mdl\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
