--- a/nazmul.ipynb
+++ b/nazmul.ipynb
@@ -641,30 +641,31 @@
       "metadata": {
         "id": "LUAx6baDNgld",
         "colab_type": "code",
-        "outputId": "aad29e25-6988-47d6-f3e5-5efd161f474e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "torch.save(Task_1A,'Task1A.mdl')\n",
+        "torch.save(predictions,'Task1A_pred.csv')\n",
         "\n",
         "from google.colab import files\n",
+        "files.download(\"Task1A_pred.csv\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "hm0xK3-jNz4W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "torch.save(prediction,'Task1A.mdl')\n",
         "files.download(\"Task1A.mdl\")"
       ],
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type Task1A. It won't be checked for correctness upon loading.\n",
-            "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -1561,7 +1562,7 @@
       "source": [
         "# define a loss function and an optimizer\n",
         "loss_functionTask2C = nn.NLLLoss()\n",
-        "optTask2C = torch.optim.SGD(Task_2C.parameters(), lr = 0.05)"
+        "optTask2C = torch.optim.SGD(Task_2C.parameters(), lr = 0.005)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1570,7 +1571,7 @@
       "metadata": {
         "id": "o3ENNXRR43Tm",
         "colab_type": "code",
-        "outputId": "7c13a3d0-215f-4d44-dd7f-ad36db99633c",
+        "outputId": "0adf257a-9feb-4dca-8d37-29f5cdfd3e7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
@@ -1612,7 +1613,7 @@
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
@@ -1632,18 +1633,18 @@
         {
           "output_type": "stream",
           "text": [
-            "CURRENT LOSS: -1.0\n",
+            "CURRENT LOSS: -0.9996838569641113\n",
             "1\n",
-            "CURRENT LOSS: -1.0\n",
+            "CURRENT LOSS: -0.9999783039093018\n",
             "2\n",
-            "CURRENT LOSS: -1.0\n",
+            "CURRENT LOSS: -0.9999979734420776\n",
             "3\n",
-            "CURRENT LOSS: -1.0\n",
+            "CURRENT LOSS: -0.9999992847442627\n",
             "--- AFTER TRAINING ---\n",
-            "Precision: 0.7370381868984788\n",
-            "Recall: 0.9428117553613979\n",
-            "f1-score: 0.8273218330719638\n",
-            "Accuracy: 0.8018\n"
+            "Precision: 0.880066170388751\n",
+            "Recall: 0.8451151707704527\n",
+            "f1-score: 0.8622366288492707\n",
+            "Accuracy: 0.864\n"
           ],
           "name": "stdout"
         }
@@ -1653,7 +1654,7 @@
       "metadata": {
         "id": "45hI6_UH43h7",
         "colab_type": "code",
-        "outputId": "a7621d89-58fc-46c2-d2ce-635e5349429e",
+        "outputId": "eb41be0c-9490-40c5-e0ab-123f94d6c04a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -1665,7 +1666,7 @@
         "from google.colab import files\n",
         "files.download(\"Task2C.mdl\")"
       ],
-      "execution_count": 0,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -3725,7 +3726,11 @@
       "metadata": {
         "id": "b47tWXlKUe3u",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 672
+        },
+        "outputId": "41a5d30c-1694-4f50-c9bd-f09e51cd4b73"
       },
       "cell_type": "code",
       "source": [
@@ -3739,7 +3744,7 @@
         "        bow_vec = Variable(make_bow_vector(instance, word_to_ix)).cuda()\n",
         "        label = Variable(make_target(label))\n",
         "        probs = Task_7B(bow_vec) # forward pass\n",
-        "        loss = loss_functionTask7B(probs, label)\n",
+        "        loss = loss_functionTasK7B(probs, label)\n",
         "        loss.backward()\n",
         "        optTask7B.step()\n",
         "    print('CURRENT LOSS: {}'.format(loss.data))\n",
@@ -3762,8 +3767,38 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  # This is added back by InteractiveShellApp.init_path()\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-129-ee2d255434ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmake_target\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mprobs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTask_7B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbow_vec\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_functionTasK7B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0moptTask7B\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    487\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    488\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 489\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    490\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    491\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/loss.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    433\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mweak_script_method\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    434\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 435\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmse_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    436\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    437\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mmse_loss\u001b[0;34m(input, target, size_average, reduce, reduction)\u001b[0m\n\u001b[1;32m   2154\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2155\u001b[0m         \u001b[0mexpanded_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpanded_target\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbroadcast_tensors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2156\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmse_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpanded_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpanded_target\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2157\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mret\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Expected object of scalar type Float but got scalar type Long for argument #2 'target'"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -3836,7 +3871,7 @@
       "source": [
         "# define a loss function and an optimizer\n",
         "loss_functionTask7C = nn.HingeEmbeddingLoss()\n",
-        "optTask7C = torch.optim.SGD(Task_7C.parameters(), lr = 0.005)"
+        "optTask7C = torch.optim.SGD(Task_7C.parameters(), lr = 0.001)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3845,13 +3880,17 @@
       "metadata": {
         "id": "99iH2dYIPuOW",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 853
+        },
+        "outputId": "c8a0a22e-0e62-4243-ed19-183f4bd47a81"
       },
       "cell_type": "code",
       "source": [
         "# Task7C\n",
         "# the training loop\n",
-        "for epoch in range(5):\n",
+        "for epoch in range(20):\n",
         "    print(epoch)\n",
         "    for instance, label in data:\n",
         "        # get the training data\n",
@@ -3882,8 +3921,74 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  # This is added back by InteractiveShellApp.init_path()\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "CURRENT LOSS: 1.0\n",
+            "1\n",
+            "CURRENT LOSS: 1.0\n",
+            "2\n",
+            "CURRENT LOSS: 1.0\n",
+            "3\n",
+            "CURRENT LOSS: 1.0\n",
+            "4\n",
+            "CURRENT LOSS: 1.0\n",
+            "5\n",
+            "CURRENT LOSS: 1.0\n",
+            "6\n",
+            "CURRENT LOSS: 1.0\n",
+            "7\n",
+            "CURRENT LOSS: 1.0\n",
+            "8\n",
+            "CURRENT LOSS: 1.0\n",
+            "9\n",
+            "CURRENT LOSS: 1.0\n",
+            "10\n",
+            "CURRENT LOSS: 1.0\n",
+            "11\n",
+            "CURRENT LOSS: 1.0\n",
+            "12\n",
+            "CURRENT LOSS: 1.0\n",
+            "13\n",
+            "CURRENT LOSS: 1.0\n",
+            "14\n",
+            "CURRENT LOSS: 1.0\n",
+            "15\n",
+            "CURRENT LOSS: 1.0\n",
+            "16\n",
+            "CURRENT LOSS: 1.0\n",
+            "17\n",
+            "CURRENT LOSS: 1.0\n",
+            "18\n",
+            "CURRENT LOSS: 1.0\n",
+            "19\n",
+            "CURRENT LOSS: 1.0\n",
+            "--- AFTER TRAINING ---\n",
+            "Precision: 0.3888888888888889\n",
+            "Recall: 0.0027799841143764893\n",
+            "f1-score: 0.005520504731861199\n",
+            "Accuracy: 0.4956\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -3893,9 +3998,9 @@
       },
       "cell_type": "code",
       "source": [
-        "torch.save(Task_7B,\"Task7B.mdl\")\n",
+        "torch.save(Task_7C,\"Task7C.mdl\")\n",
         "from google.colab import files\n",
-        "files.download(\"Task7B.mdl\")"
+        "files.download(\"Task7C.mdl\")"
       ],
       "execution_count": 0,
       "outputs": []
